--- a/src/styles/2-base/_core.sass
+++ b/src/styles/2-base/_core.sass
@@ -20,6 +20,11 @@ p
     margin: 0
     padding: 1em 0
 
+ul
+    list-style: none
+    margin: 0
+    padding: 0
+
 .btn
     display: inline-block
     background: white
