overlay menu added

--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -1,11 +1,34 @@
+#navigation-bar
+    background: #39cccccc
+    display: flex
+    flex-direction: row
+    align-items: center
+    height: min-content
+
+.logo-container
+    flex-basis: 70%
+
+.icon-container
+    flex-basis: 30%
+    
 #showcase
-    background: #7fdbff
+    background: #39cccccc
+
+#section-a
+    padding-bottom: 1.5em
 
 #section-b
     background: #3d9770
 
 #section-c
     background: #FFDC00
-
+    
 #main-footer
-    background: #DDDDDD
+    padding-top: 5em
+    padding-bottom: 1em
+    background: #FFDC00
+    color: #00000070
+    font-size: 10px
+    line-height: 10px
+
+
