created new html pages

--- a/src/styles/2-base/_buttons.sass
+++ b/src/styles/2-base/_buttons.sass
@@ -1,6 +1,9 @@
-.icon-container
-    text-align: right
+.home-icon
+    color: #FFDC00
+    font-size: 1.6em
+    padding: 1em
 
+//menu icon and content
 .menu-icon
     color: #FFDC00
     font-size: 1.8em
@@ -44,6 +47,11 @@
 
 .menu-color
     color: whitesmoke
+
+//instagram and fb
+.logo-container
+    text-align: center
+    padding-top: 1em
 
 .logo-icon
     color: black
