--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -5,11 +5,13 @@
     align-items: center
     height: min-content
 
-.logo-container
+.home-container
     flex-basis: 70%
+    text-align: left
 
-.icon-container
+.menu-icon-container
     flex-basis: 30%
+    text-align: right
     
 #showcase
     background: #39cccccc
