polished the menu

--- a/src/styles/2-base/_core.sass
+++ b/src/styles/2-base/_core.sass
@@ -1,5 +1,8 @@
 body
+    height: 100%
     margin: 0
+
+body
     font-family: Arial, sans-serif
     background: white
     color: #333
@@ -27,15 +30,3 @@ ul
 
 a
     text-decoration: none
-
-.btn
-    display: inline-block
-    background: white
-    color: #333
-    text-decoration: 0
-    padding: 0.5em 1em
-    border: 1px solid #666
-
-.btn:hover
-    background: blue
-    colour: #333
