--- a/src/styles/2-base/_buttons.sass
+++ b/src/styles/2-base/_buttons.sass
@@ -1,11 +1,11 @@
 .home-icon
-    color: #FFDC00
+    color: $yellow-button
     font-size: 1.6em
     padding: 1em
 
 //menu icon and content
 .menu-icon
-    color: #FFDC00
+    color: $yellow-button
     font-size: 1.8em
     padding: 1em
     border: none
@@ -16,27 +16,37 @@
     height: 100%
     width: 0%
     position: fixed
-    z-index: 1
+    z-index: 1000 //must be higher than #navigation-bar
     left: 0
     top: 0
-    background-color: rgba(0,0,0, 0.9)   
+    background-color: rgba(0,0,0, 0.95)   
     overflow-x: hidden
     transition: 0.5s
 
 .menu-content
     position: relative
-    top: 25%
+    top: 20%
     width: 100%
     padding-left: 0.5em
 
-.menu-content li
+#dropdown
+    height: 100%
+    width: 100%
+    position: relative
+    display: none
+    font-size: 0.8em
+    padding-left: 1.5em
+    animation: fadeEffect 1.5s
+
+.menu-content li,
+.menu-content li ul li
     padding: 1em
     text-decoration: none
     font-size: 1.4em
     line-height: 0
     text-align: left
     display: block
-    transitions: 0.3s
+    transition: 0.3s
 
 #close-button
     position: absolute
@@ -44,9 +54,27 @@
     padding-right: 1em
     right: 0
     font-size: 3em
-
-.menu-color
     color: whitesmoke
+
+.menu-link
+    color: whitesmoke
+    cursor: pointer
+
+.active
+    display: block !important
+
+//read more buttons
+.read-more
+    display: inline-block
+    background: white
+    color: #333
+    text-decoration: 0
+    padding: 0.5em 1em
+    border: 1px solid #666
+
+.read-more:hover
+    background: whitesmoke
+    color: #333
 
 //instagram and fb
 .logo-container
