responsiveness implemented for bigger screens

--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -12,11 +12,11 @@
     position: sticky
 
 .home-container
-    flex-basis: 70%
-    text-align: left
+    flex-basis: 20%
+    text-align: center
 
 .menu-icon-container
-    flex-basis: 30%
+    flex-basis: 80%
     text-align: right
     
 #showcase
