added showcase photo and fixed soem bugs

--- a/src/styles/1-helpers/_variables.sass
+++ b/src/styles/1-helpers/_variables.sass
@@ -1,8 +1,6 @@
-$yellow-background: rgba(255, 221, 0, 0.7) //comes from #FFDC00
 $yellow-button: rgba(255, 221, 0, 1)
-$contact-form: rgba(255, 221, 0, 0.5)
-$green-background: rgba(81, 184, 139, 1) //comes from #3d9770s
-$green-button: rgba(81, 184, 139, 1)
+$green-background: #6bbfc5
+$green-button: #6bbfc5
 
 @keyframes fadeEffect
     0%
