--- a/src/styles/5-modules/_contact-form.sass
+++ b/src/styles/5-modules/_contact-form.sass
@@ -1,14 +1,14 @@
-.contact-form
+#contact-form
     width: inherit
     height: min-content
 
-.contact-form
+#contact-form
     text-align: center
     padding: 0 2em 0 2em
 
-.contact-form > input, 
-.contact-form > textarea,
-.contact-form > button
+#contact-form > input, 
+#contact-form > textarea,
+#contact-form > button
     text-decoration: none
     font-size: 1.1em
     font-family: Arial, sans-serif
@@ -17,14 +17,13 @@
     width: 100%
     background-color: inherit
     margin-bottom: 0.3em
-    //box-shadow: 2px 2px 1px 0px #616161cc
-    //border-radius: 3px
+
     border-bottom: 1px solid
 
-.contact-form > textarea
+#contact-form > textarea
     resize: none
 
-.contact-form > button
+#contact-form > button
     width: auto
     padding: 0.5em
     margin-top: 0.5em
