--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -1,3 +1,6 @@
+.grid
+    padding: 1em 1em 0 1em
+
 #navigation-bar
     background: $green-background    
     display: flex
@@ -8,50 +11,42 @@
     right: 0
     z-index: 100
     width: 100%
-    height: 100px
+    height: 80px
     position: sticky
 
 .home-container
-    flex-basis: 20%
+    flex-basis: 10%
     text-align: center
 
 .menu-icon-container
-    flex-basis: 80%
+    flex-basis: 90%
     text-align: right
-    
-#showcase
-    background: white //replace with a picture
-    padding: 0 0.5em 0 0.5em
 
 #section-a
     padding-bottom: 1.5em
     background: white
-    padding: 0 0.5em 0 0.5em
 
 .card-content
     padding-top: 1em
     padding-bottom: 1em
 
 #section-b
-    background: $green-background
-    padding: 0 0.5em 0 0.5em
+    background: whitesmoke
 
 #section-c
-    background: $yellow-background
-    padding: 0 0.5em 0 0.5em
+    background: white
 
 #section-d
-    background: $yellow-background
-    padding: 0 0.5em 0 0.5em
+    background: white
 
 #main-footer
     padding-top: 2em
     padding-bottom: 1em
-    background: $yellow-background
+    background: white
     color: #00000070
-    font-size: 10px
-    line-height: 10px
+    line-height: 2em
     height: min-content
+    font-size: 10px
 
 .flex-box
     display: flex
