nav bar transparent; different fonts

--- a/src/styles/1-helpers/_variables.sass
+++ b/src/styles/1-helpers/_variables.sass
@@ -1,6 +1,6 @@
-$yellow-button: rgba(255, 221, 0, 1)
-$green-background: #6bbfc5
-$green-button: #6bbfc5
+$yellow-button: #FFBB94
+$green-background: #1C9999
+$green-button: #1C9999
 
 @keyframes fadeEffect
     0%
