--- a/src/styles/2-base/_core.sass
+++ b/src/styles/2-base/_core.sass
@@ -21,6 +21,8 @@ img
 h1, h2, h3
     margin: 0
     padding: 1em 0
+    font-family: Roboto, sans-serif
+    font-weight: normal
 
 p
     margin: 0
