--- a/src/styles/4-templates/_media-screen.sass
+++ b/src/styles/4-templates/_media-screen.sass
@@ -8,12 +8,6 @@
     #main-footer div
         grid-column: 2/4
 
-    #navigation-bar
-        height: 100px
-
-    .showcase-image
-        height: 350px
-
     #section-a
         padding: 1em
     
@@ -29,12 +23,12 @@
         width: inherit
         position: relative
         z-index: 1
-        background-color: inherit   
         overflow-x: hidden
         transition: 0.5s
         flex-basis: 90%
         display: inline-flex
         overflow-y: hidden
+        background: transparent
     
     #menu ul
         display: inline-flex
@@ -45,7 +39,7 @@
     #menu ul li
         height: min-content
         padding: 0.5em
-        font-size: 1.4em
+        font-size: 1.5em
 
     .menu-icon-container,
     #close-button,
