--- a/src/styles/2-base/_buttons.sass
+++ b/src/styles/2-base/_buttons.sass
@@ -1,7 +1,8 @@
 .home-icon
     color: $yellow-button
-    font-size: 1.6em
+    font-size: 1.7em
     padding: 1em
+    margin-left: 0.5em
 
 //menu icon and content
 .menu-icon
@@ -19,7 +20,7 @@
     z-index: 1000 //must be higher than #navigation-bar
     left: 0
     top: 0
-    background-color: rgba(0,0,0, 0.95)   
+    background-color: rgba(0, 0, 0, 0.95)   
     overflow-x: hidden
     transition: 0.5s
 
@@ -41,11 +42,14 @@
 .menu-content li ul li
     padding: 1em
     text-decoration: none
-    font-size: 1.6em
+    font-size: 1.7em
     line-height: 0.4em
     text-align: center
     display: block
     transition: 0.3s
+    font-family: 'Roboto', sans-serif
+    font-weight: lighter
+
 
 #close-button
     position: absolute
