--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -2,7 +2,7 @@
     padding: 1em 1em 0 1em
 
 #navigation-bar
-    background: $green-background    
+    background: rgba(0, 0, 0, 0.5)   
     display: flex
     flex-direction: row
     align-items: center
@@ -12,7 +12,11 @@
     z-index: 100
     width: 100%
     height: 80px
-    position: sticky
+    position: fixed
+
+.sticky-bar
+    position: sticky !important
+    background-color: $green-background !important
 
 .home-container
     flex-basis: 10%
