form bug fixed; jquery.validation plugin added

--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -16,6 +16,7 @@
 
 .sticky-bar
     position: sticky !important
+    position: -webkit-sticky !important
     background-color: $green-background !important
 
 .home-container
