--- a/src/styles/2-base/_buttons.sass
+++ b/src/styles/2-base/_buttons.sass
@@ -21,14 +21,14 @@
     left: 0
     top: 0
     background-color: rgba(0, 0, 0, 0.95)   
-    overflow-x: hidden
     transition: 0.5s
+    overflow-y: scroll
+    overflow-x: hidden
 
 .menu-content
     position: relative
     top: 20%
     width: 100%
-    padding-left: 0.5em
 
 #dropdown
     height: 100%
