--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -14,10 +14,9 @@
     height: 80px
     position: absolute
     
-//.sticky-bar
-    //position: sticky !important
-    //position: -webkit-sticky !important
-    //background-color: $green-background !important
+.sticky-bar
+    position: initial !important
+    background-color: $green-background !important
 
 .home-container
     flex-basis: 10%
