finish form; fix navbar

--- a/src/styles/5-modules/_contact-form.sass
+++ b/src/styles/5-modules/_contact-form.sass
@@ -1,14 +1,13 @@
 #contact-form
     width: inherit
     height: min-content
-
-#contact-form
     text-align: center
     padding: 0 2em 0 2em
+    line-height: 2em
 
 #contact-form > input, 
 #contact-form > textarea,
-#contact-form > button
+#submit-button
     text-decoration: none
     font-size: 1.1em
     font-family: Arial, sans-serif
@@ -23,7 +22,7 @@
 #contact-form > textarea
     resize: none
 
-#contact-form > button
+#submit-button
     width: auto
     padding: 0.5em
     margin-top: 0.5em
