--- a/src/styles/2-base/_core.sass
+++ b/src/styles/2-base/_core.sass
@@ -1,17 +1,15 @@
 html
     height: 100%
-
-body
-    height: 100%
-    margin: 0
-
+    
 body
     font-family: Arial, sans-serif
     background: white
     color: #333
     font-size: 1.1em
-    line-height: 1.5
+    line-height: 1.5em
     text-align: center
+    height: 100%
+    margin: 0
 
 img
     display: block
