fix some html dexcessive code

--- a/src/styles/2-base/_buttons.sass
+++ b/src/styles/2-base/_buttons.sass
@@ -47,7 +47,7 @@
     text-align: center
     display: block
     transition: 0.3s
-    font-family: 'Roboto', sans-serif
+    font-family: $button-font
     font-weight: lighter
 
 
