--- a/src/styles/2-base/_core.sass
+++ b/src/styles/2-base/_core.sass
@@ -2,7 +2,7 @@ html
     height: 100%
     
 body
-    font-family: Arial, sans-serif
+    font-family: $main-font
     background: white
     color: #333
     font-size: 1.1em
@@ -19,7 +19,7 @@ img
 h1, h2, h3
     margin: 0
     padding: 1em 0
-    font-family: Roboto, sans-serif
+    font-family: $main-font
     font-weight: normal
 
 p
