--- a/src/styles/1-helpers/_variables.sass
+++ b/src/styles/1-helpers/_variables.sass
@@ -1,7 +1,3 @@
-$yellow-button: #FFBB94
-$green-background: #1C9999
-$green-button: #1C9999
-
 @keyframes fadeEffect
     0%
         opacity: 0
@@ -10,4 +6,17 @@ $green-button: #1C9999
     100%
         opacity: 1
 
-$animate: all 0.2s ease-in-out
+@font-face
+    font-family: Roboto, sans-serif
+
+@font-face
+    font-family: 'Lato', sans-serif
+
+
+
+
+$yellow-button: #FFBB94
+$green-background: #1C9999
+$green-button: #1C9999
+$main-font: 'Lato', sans-serif
+$button-font: Roboto, sans-serif
