add containers; add photos; change colors

--- a/src/styles/1-helpers/_variables.sass
+++ b/src/styles/1-helpers/_variables.sass
@@ -12,11 +12,9 @@
 @font-face
     font-family: 'Lato', sans-serif
 
-
-
-
 $yellow-button: #FFBB94
-$green-background: #1C9999
-$green-button: #1C9999
+$green: #87c5be
+$green-title: #61b6ac
+$green-transparent: #87c5be40
 $main-font: 'Lato', sans-serif
 $button-font: Roboto, sans-serif
