--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -16,7 +16,7 @@
     
 .sticky-bar
     position: initial !important
-    background-color: $green-background !important
+    background-color: $green !important
 
 .home-container
     flex-basis: 10%
@@ -26,13 +26,19 @@
     flex-basis: 90%
     text-align: right
 
+#headline
+    background: white
+    padding: 0 1em 0 1em
+    height: min-content
+
 #section-a
-    padding-bottom: 1.5em
     background: white
 
-.card-content
-    padding-top: 1em
-    padding-bottom: 1em
+#section-a ul li
+    margin-bottom: 1em
+
+#section-a ul li h2
+    padding-bottom: 0
 
 #section-b
     background: whitesmoke
