--- a/src/styles/5-modules/_contact-form.sass
+++ b/src/styles/5-modules/_contact-form.sass
@@ -16,7 +16,6 @@
     width: 100%
     background-color: inherit
     margin-bottom: 0.3em
-
     border-bottom: 1px solid
 
 #contact-form > textarea
@@ -26,7 +25,7 @@
     width: auto
     padding: 0.5em
     margin-top: 0.5em
-    background-color: $green-button
+    background-color: $green
     color: white
     border-bottom: 0
     border-radius: 3px
