--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -8,4 +8,4 @@
 @import "4-templates/media-screen"
 
 @import "5-modules/contact-form"
-@import "5-modules/image-boxes"
+@import "5-modules/image-containers.sass"
