remove important tags

--- a/src/styles/2-base/_buttons.sass
+++ b/src/styles/2-base/_buttons.sass
@@ -64,8 +64,8 @@
     color: whitesmoke
     cursor: pointer
 
-.active
-    display: block !important
+#dropdown.active
+    display: block
 
 button
     cursor: pointer
