--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -14,9 +14,9 @@
     height: 80px
     position: absolute
     
-.sticky-bar
-    position: initial !important
-    background-color: $green !important
+#navigation-bar.sticky-bar
+    position: initial
+    background-color: $green
 
 .home-container
     flex-basis: 10%
