--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -11,7 +11,7 @@
         grid-gap: 1em
 
     .image-grid li
-        margin: 0em !important
+        margin: 0em
 
     #race-1
         grid-area: race-1
@@ -25,6 +25,15 @@
     .content-wrap,
     #main-footer div
         grid-column: 2/4
+
+    .showcase-image
+        height: 100vh
+
+    .showcase-image h1
+        position: absolute
+        width: 100%
+        top: 0
+
 
     #section-a
         padding: 1em
@@ -52,10 +61,10 @@
         padding: 0.5em
         font-size: 1.5em
 
-    .menu-icon-container,
-    #close-button,
-    .hide
-        display: none !important
+    #navigation-bar .menu-icon-container,
+    #menu #close-button,
+    #dropdown.hide
+        display: none
 
     #contact-form
         line-height: 1.5em
@@ -69,4 +78,4 @@
         grid-gap: 1em
 
     .image-grid li
-        margin: 0em !important
+        margin: 0em
