create big showcase; shift headlines accordingly

--- a/src/styles/1-helpers/_variables.sass
+++ b/src/styles/1-helpers/_variables.sass
@@ -6,6 +6,13 @@
     100%
         opacity: 1
 
+@keyframes arrow
+  0%
+    opacity: 1
+  100%
+    opacity: 0
+    transform: translate(-10px, -10px)
+
 @font-face
     font-family: Roboto, sans-serif
 
