--- a/src/styles/4-modules/_image-containers.sass
+++ b/src/styles/4-modules/_image-containers.sass
@@ -10,6 +10,20 @@
     object-fit: cover
     object-position: bottom
 
+.big-headline
+    position: absolute
+    width: 100%
+    bottom: 35%
+    color: whitesmoke
+    font-size: 1.5em
+    font-family: $button-font
+    line-height: 1.1em
+    font-weight: lighter
+    background-color: #00000040
+    display: none
+.big-headline.active
+    display: block
+
 // race containers
 .card-content
     padding: 1em
