--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -2,7 +2,7 @@
     padding: 1em 1em 0 1em
 
 #navigation-bar
-    background: rgba(0, 0, 0, 0.5)   
+    background: rgba(0, 0, 0, 0.1)   
     display: flex
     flex-direction: row
     align-items: center
@@ -26,10 +26,14 @@
     flex-basis: 90%
     text-align: right
 
-#headline
+.headline
     background: white
     padding: 0 1em 0 1em
     height: min-content
+    display: none
+
+.headline.active
+    display: block
 
 #section-a
     background: white
