--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -10,9 +10,6 @@
         grid-template-areas: ". race-1 race-2" ". race-3 race-4"
         grid-gap: 1em
 
-    .image-grid li
-        margin: 0em
-
     #race-1
         grid-area: race-1
     #race-2
@@ -29,14 +26,11 @@
     .showcase-image
         height: 100vh
 
-    .showcase-image h1
-        position: absolute
-        width: 100%
-        top: 0
-
-
     #section-a
         padding: 1em
+
+    #section-a ul li
+        margin: 0
 
     #menu
         height: initial
