--- a/src/styles/2-base/_buttons.sass
+++ b/src/styles/2-base/_buttons.sass
@@ -3,11 +3,18 @@
     font-size: 1.7em
     padding: 1em
     margin-left: 0.5em
+    display: none
+
+#logo
+    font-family: $logo-font
+    font-size: 2em
+    padding: 1em 0 1em 0
+    color: whitesmoke
 
 //menu icon and content
 .menu-icon
-    color: $yellow-button
-    font-size: 1.8em
+    color: whitesmoke
+    font-size: 2em
     padding: 1em
     border: none
     background-color: inherit
