--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -20,7 +20,9 @@
 
 .home-container
     flex-basis: 10%
-    text-align: center
+    height: 100%
+    display: inline-flex
+    padding-left: 5%
 
 .menu-icon-container
     flex-basis: 90%
