add lang button; change navigation order; rename runners to about

--- a/src/styles/2-base/_buttons.sass
+++ b/src/styles/2-base/_buttons.sass
@@ -1,19 +1,17 @@
-.home-icon
-    color: $yellow-button
-    font-size: 1.7em
-    padding: 1em
-    margin-left: 0.5em
-    display: none
-
+// logo
 #logo
     font-family: $logo-font
     font-size: 2em
     padding: 1em 0 1em 0
-    color: whitesmoke
+    color: white
+
+// lang switch
+.language-switch
+    padding-right: 5px
 
 //menu icon and content
 .menu-icon
-    color: whitesmoke
+    color: white
     font-size: 2em
     padding: 1em
     border: none
@@ -50,7 +48,7 @@
     padding: 1em
     text-decoration: none
     font-size: 1.7em
-    line-height: 0.4em
+    line-height: 5px
     text-align: center
     display: block
     transition: 0.3s
@@ -96,9 +94,9 @@ button
     padding-top: 1em
 
 .logo-icon
-    color: black
+    color: #333
     font-size: 1.8em
-    padding: 0.2em
+    padding: 0.3em
 
 // links
 .about p > a
