--- a/src/styles/4-modules/_contact-form.sass
+++ b/src/styles/4-modules/_contact-form.sass
@@ -26,9 +26,14 @@
     padding: 0.5em
     margin-top: 0.5em
     background-color: $green
-    color: white
+    color: whitesmoke
     border-bottom: 0
     border-radius: 3px
+
+#submit-button:hover,
+#submit-button:focus
+    color: white
+    text-decoration: underline
 
 .has-error
     background-color: red
