--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -49,6 +49,7 @@
         justify-content: space-around
         height: min-content
         padding-right: 3%
+        align-items: center
 
     #menu ul li
         height: min-content
@@ -59,6 +60,9 @@
     #menu #close-button,
     #dropdown.hide
         display: none
+
+    .menu-link
+        color: white
 
     #contact-form
         line-height: 1.5em
