--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -56,6 +56,9 @@
         padding: 0.5em
         font-size: 1.3em
 
+    .language-switch
+        padding-right: 5px
+
     #navigation-bar .menu-icon-container,
     #menu #close-button,
     #dropdown.hide
