--- a/src/styles/1-helpers/_variables.sass
+++ b/src/styles/1-helpers/_variables.sass
@@ -13,22 +13,10 @@
     opacity: 0
     transform: translate(-10px, -10px)
 
-@font-face
-    font-family: 'GilroyThin'
-    src: url("fonts/gilroy-light-webfont.woff") format("woof")
-    font-weight: normal
-    font-style: normal
-
-@font-face
-    font-family: 'GilroyExtraBold'
-    src: url("fonts/gilroy-extrabold-webfont.woff") format("woof")
-    font-weight: normal
-    font-style: normal
-
 $yellow-button: #FFBB94
 $green: #87c5be
 $green-title: #61b6ac
 $green-transparent: #87c5be40
-$main-font: 'Lato', sans-serif
+$main-font: 'Open Sans', sans-serif
 $button-font: 'Roboto', sans-serif
 $logo-font: 'Martel Sans', sans-serif
