--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -57,7 +57,7 @@
         font-size: 1.3em
 
     .language-switch
-        apadding-right: 5px
+        padding-right: 5px
 
     #navigation-bar .menu-icon-container,
     #menu #close-button,
