change headline for mobile

--- a/src/styles/2-base/_core.sass
+++ b/src/styles/2-base/_core.sass
@@ -18,9 +18,9 @@ img
 
 h1, h2, h3
     margin: 0
-    padding: 1em 0
+    padding: 1em
     font-family: $main-font
-    font-weight: normal
+    font-weight: 500
 
 p
     margin: 0
