--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -23,6 +23,9 @@
     #main-footer div
         grid-column: 2/4
 
+    .image-wrap
+        grid-column: 1/5
+
     .showcase-image
         height: 100vh
 
