fix headline bug

--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -48,8 +48,7 @@
     background: white
 
 #main-footer
-    padding-top: 2em
-    padding-bottom: 1em
+    padding: 2em 0 0 1em
     background: white
     color: #00000070
     line-height: 2em
