fill-in banner + go3v sl

--- a/src/styles/2-base/_buttons.sass
+++ b/src/styles/2-base/_buttons.sass
@@ -74,15 +74,15 @@ button
     cursor: pointer
 
 //read more buttons
-.read-more
+.btn
     display: inline-block
     text-decoration: 0
     background: $green
     color: white
     padding: 0.5em 1em
 
-.read-more:hover,
-.read-more:focus
+.btn:hover,
+.btn:focus
     color: $green
     background: $green-transparent
 
@@ -95,13 +95,8 @@ button
     color: #333
     font-size: 1.8em
     padding: 0.3em
-
-// links
-.about p > a
-    color: $green
-
-.about p > a:hover
-    text-decoration: underline
+#logo:hover
+    text-decoration: none
 
 // scroll-down arrow
 .arrow,
