--- a/src/styles/2-base/_core.sass
+++ b/src/styles/2-base/_core.sass
@@ -5,7 +5,7 @@ body
     font-family: $main-font
     background: white
     color: #333
-    font-size: 1em
+    font-size: 1.1em
     line-height: 1.4em
     text-align: center
     height: 100%
@@ -33,3 +33,10 @@ ul
 
 a
     text-decoration: none
+    color: $green
+a:hover
+    text-decoration: underline
+.green-bg
+    background-color: $green
+.wsmoke-bg
+    background-color: whitesmoke
