--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -1,7 +1,7 @@
 @media screen and (min-width: 700px)
     .grid
         display: grid
-        grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr
+        grid-template-columns: 1fr repeat(2, minmax(auto, 22em)) 1fr
 
     .image-grid
         display: grid
@@ -9,6 +9,13 @@
         grid-template-rows: auto auto
         grid-template-areas: ". race-1 race-2" ". race-3 race-4"
         grid-gap: 1em
+
+    .box-grid
+        display: grid
+        grid-template-columns: 1fr repeat(2, minmax(auto, 15em)) 1fr
+
+    .box-item
+        grid-column: 2/4
 
     #race-1
         grid-area: race-1
@@ -76,7 +83,7 @@
 @media screen and (min-width: 1200px)
     .image-grid
         display: grid
-        grid-template-columns: 1fr repeat(4, minmax(auto, 25em)) 1fr
+        grid-template-columns: 1fr repeat(4, minmax(auto, 22em)) 1fr
         grid-template-rows: auto
         grid-template-areas: ". race-1 race-2 race-3 race-4 ."
         grid-gap: 1em
