remove unnecessary grid; align left long texts

--- a/src/styles/2-base/_buttons.sass
+++ b/src/styles/2-base/_buttons.sass
@@ -73,7 +73,7 @@
 button
     cursor: pointer
 
-//read more buttons
+//read more & enroll buttons
 .btn
     display: inline-block
     text-decoration: 0
