--- a/src/styles/2-base/_core.sass
+++ b/src/styles/2-base/_core.sass
@@ -7,7 +7,6 @@ body
     color: #333
     font-size: 1.1em
     line-height: 1.4em
-    text-align: center
     height: 100%
     margin: 0
 
@@ -16,11 +15,11 @@ img
     width: 100%
     height: auto
 
-h1, h2, h3
+h1, h2, h2
     margin: 0
-    padding: 1em
-    font-family: $main-font
-    font-weight: 500
+    padding: 1em 0 1em 0
+    font-family: Arial
+    font-weight: normal
 
 p
     margin: 0
@@ -36,7 +35,3 @@ a
     color: $green
 a:hover
     text-decoration: underline
-.green-bg
-    background-color: $green
-.wsmoke-bg
-    background-color: whitesmoke
