--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -28,24 +28,25 @@
     flex-basis: 90%
     text-align: right
 
-#section-a
+.section-a
     background: white
     padding: 0em 1em 0 1em
 
-#section-a ul li
+.section-a ul li
     margin-bottom: 1em
 
-#section-a ul li h2
+.section-a ul li h1
     padding-bottom: 0
 
-#section-b
+.section-b
     background: whitesmoke
 
-#section-c
+.section-c
     background: white
 
-#section-d
+.section-d
     background: white
+    text-align: left
 
 #main-footer
     padding: 2em 0 0 1em
@@ -54,6 +55,7 @@
     line-height: 2em
     height: min-content
     font-size: 10px
+    text-align: center
 
 .flex-box
     display: flex
@@ -66,6 +68,8 @@
 .flex-footer
     flex: auto
 
-//races
-.green-bg.box-item
-    margin-bottom: 1em
+.center
+    text-align: center
+
+.top-padding
+    padding-top: 1em
