--- a/src/styles/4-modules/_image-containers.sass
+++ b/src/styles/4-modules/_image-containers.sass
@@ -13,6 +13,7 @@
 //desktop headline
 .big-headline
     position: absolute
+    text-align: center
     width: 100%
     bottom: 40%
     color: whitesmoke
@@ -28,6 +29,7 @@
 //mobile headline
 .headline
     color: white
+    background-color: $green
     padding: 0
     margin-bottom: 1em
     height: 50vh
@@ -42,6 +44,7 @@
     right: 0
 .headline-text
     position: absolute
+    text-align: center
     font-size: 1.5em
     font-family: $button-font
     line-height: 1.1em
@@ -57,8 +60,9 @@
 // race containers
 .card-content
     padding: 1em
+    text-align: center
 
-.card-content h2
+.card-content h1
     color: $green-title
 
 .image-grid li
