--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -10,13 +10,6 @@
         grid-template-areas: ". race-1 race-2" ". race-3 race-4"
         grid-gap: 1em
 
-    .box-grid
-        display: grid
-        grid-template-columns: 1fr repeat(2, minmax(auto, 15em)) 1fr
-
-    .box-item
-        grid-column: 2/4
-
     #race-1
         grid-area: race-1
     #race-2
@@ -36,10 +29,10 @@
     .showcase-image
         height: 100vh
 
-    #section-a
+    .section-a
         padding: 1em
 
-    #section-a ul li
+    .section-a ul li
         margin: 0
 
     #menu
