--- a/src/styles/1-helpers/_variables.sass
+++ b/src/styles/1-helpers/_variables.sass
@@ -14,7 +14,7 @@
     transform: translate(-10px, -10px)
 
 $yellow-button: #FFBB94
-$green: #87c5be
+$green: rgb(135, 197, 190)
 $green-title: #61b6ac
 $green-transparent: #87c5be40
 $main-font: 'Open Sans', sans-serif
