--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -5,7 +5,8 @@
     background: rgba(0, 0, 0, 0.1)   
     display: flex
     flex-direction: row
-    align-items: center
+    align-items: first baseline
+    justify-content: left
     top: 0
     left: 0
     right: 0
@@ -20,13 +21,16 @@
 
 .home-container
     flex-basis: 10%
-    height: 100%
+    height: inherit
     display: inline-flex
-    padding-left: 5%
+    padding-left: 3%
 
 .menu-icon-container
     flex-basis: 90%
-    text-align: right
+    height: inherit
+    display: inline-flex
+    justify-content: right
+    padding-right: 3%
 
 .section-a
     background: white
