--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -1,11 +1,11 @@
 @media screen and (min-width: 700px)
     .grid
         display: grid
-        grid-template-columns: 1fr repeat(2, minmax(auto, 22em)) 1fr
+        grid-template-columns: 1fr repeat(2, minmax(auto, 20em)) 1fr
 
     .image-grid
         display: grid
-        grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr
+        grid-template-columns: 1fr repeat(2, minmax(auto, 24em)) 1fr
         grid-template-rows: auto auto
         grid-template-areas: ". race-1 race-2" ". race-3 race-4"
         grid-gap: 1em
@@ -18,7 +18,6 @@
         grid-area: race-3
     #race-4
         grid-area: race-4
-
     .content-wrap,
     #main-footer div
         grid-column: 2/4
@@ -49,14 +48,15 @@
     
     #menu ul
         display: inline-flex
-        justify-content: space-around
+        justify-content: flex-end
         height: min-content
         padding-right: 3%
         align-items: center
 
     #menu ul li
         height: min-content
-        padding: 0.5em
+        padding-right: minmax(0.5, 1em)
+        pading-left: minmax(0.5, 1em)
         font-size: 1.3em
 
     .language-switch
@@ -76,7 +76,7 @@
 @media screen and (min-width: 1200px)
     .image-grid
         display: grid
-        grid-template-columns: 1fr repeat(4, minmax(auto, 22em)) 1fr
+        grid-template-columns: 1fr repeat(4, 23vw) 1fr
         grid-template-rows: auto
         grid-template-areas: ". race-1 race-2 race-3 race-4 ."
         grid-gap: 1em
