--- a/src/styles/4-modules/_image-containers.sass
+++ b/src/styles/4-modules/_image-containers.sass
@@ -1,7 +1,7 @@
 // showcase
 .showcase-image
     position: relative
-    height: 50vh
+    height: 60vh
 
 .showcase-image img
     position: relative
@@ -32,7 +32,7 @@
     background-color: $green
     padding: 0
     margin-bottom: 1em
-    height: 50vh
+    height: 40vh
     width: 100%
     display: none
     position: relative
@@ -59,8 +59,9 @@
 
 // race containers
 .card-content
-    padding: 1em
     text-align: center
+    position: relative
+    padding: 1em
 
 .card-content h1
     color: $green-title
