--- a/src/styles/2-base/_core.sass
+++ b/src/styles/2-base/_core.sass
@@ -15,15 +15,21 @@ img
     width: 100%
     height: auto
 
-h1, h2, h2
+h1, h2, h3
     margin: 0
-    padding: 1em 0 1em 0
+    padding-top: 1em
+    padding-bottom: 0.5em
     font-family: Arial
     font-weight: normal
 
+h1
+    font-size: 1.5em
+
+h2
+    font-size: 1.2em
+
 p
     margin: 0
-    padding: 1em 0
 
 ul
     list-style: none
@@ -35,3 +41,7 @@ a
     color: $green
 a:hover
     text-decoration: underline
+
+.small-text
+    font-size: 0.8em
+
