--- a/src/styles/2-base/_buttons.sass
+++ b/src/styles/2-base/_buttons.sass
@@ -1,13 +1,3 @@
-// logo
-#logo
-    font-family: $logo-font
-    font-size: 2em
-    color: white
-    align-self: center
-
-// lang switch
-
-
 //menu icon and content
 .menu-icon
     color: white
@@ -89,11 +79,11 @@ button
     background: $green-transparent
 
 //instagram and fb
-.logo-container
+.icon-container
     text-align: center
-    padding-top: 1em
+    padding-top: 2.5em
 
-.logo-icon
+.icon
     color: #333
     font-size: 1.8em
     padding: 0.3em
