--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -19,14 +19,22 @@
     position: initial
     background-color: $green
 
+// logo
+#logo
+    font-family: $logo-font
+    font-size: 1.5em
+    color: white
+    align-self: center
+
 .home-container
-    flex-basis: 10%
+    flex-basis: 205px
+    min-width: 205px
     height: inherit
     display: inline-flex
     padding-left: 3%
 
 .menu-icon-container
-    flex-basis: 90%
+    flex-basis: auto
     height: inherit
     display: inline-flex
     justify-content: right
