--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -22,23 +22,30 @@
 // logo
 #logo
     font-family: $logo-font
-    font-size: 1.5em
+    font-size: 2em
     color: white
     align-self: center
 
 .home-container
-    flex-basis: 205px
-    min-width: 205px
+    flex-basis: 20%
     height: inherit
     display: inline-flex
     padding-left: 3%
 
 .menu-icon-container
-    flex-basis: auto
+    flex-basis: 80%
     height: inherit
     display: inline-flex
     justify-content: right
     padding-right: 3%
+
+.title
+    text-align: center
+    font-size: 2em
+    line-height: 1.2em
+    font-family: $logo-font
+    padding: 0.5em
+    display: inline-block
 
 .section-a
     background: white
@@ -61,7 +68,7 @@
     text-align: left
 
 #main-footer
-    padding: 2em 0 0 1em
+    padding: 2em 0 0 0
     background: white
     color: #00000070
     line-height: 2em
@@ -72,7 +79,7 @@
 .flex-box
     display: flex
     flex-flow: column
-    height: calc(100vh - 100px)
+    height: calc(100% - 80px)
 
 .flex-item
     flex: 90%
