--- a/src/styles/2-base/_buttons.sass
+++ b/src/styles/2-base/_buttons.sass
@@ -34,7 +34,7 @@
 
 .menu-content li,
 .menu-content li ul li
-    padding: 0.5em 0.3em 0.5em 0.3em
+    padding: 0.5em
     text-decoration: none
     font-size: 1.7em
     text-align: center
