--- a/src/styles/4-modules/_image-containers.sass
+++ b/src/styles/4-modules/_image-containers.sass
@@ -18,7 +18,7 @@
     bottom: 40%
     color: whitesmoke
     font-family: $button-font
-    font-size: 1.4em
+    font-size: 1.6rem
     line-height: 1.1em
     font-weight: lighter
     background-color: rgba(0, 0, 0, 0.3)
@@ -44,7 +44,7 @@
 .headline-text
     position: absolute
     text-align: center
-    font-size: 1.5em
+    font-size: 1.8rem
     font-family: $button-font
     line-height: 1.1em
     font-weight: lighter
@@ -64,6 +64,10 @@
 
 .card-content h1
     color: $green-title
+
+.card-content p
+    font-size: 1.2rem
+    line-height: 1.7rem
 
 .image-grid li
     background: whitesmoke
