--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -41,7 +41,7 @@
         z-index: 1
         overflow-x: hidden
         transition: 0.5s
-        flex-basis: 90%
+        flex-basis: auto
         display: inline-flex
         overflow-y: hidden
         background: transparent
@@ -50,19 +50,15 @@
         display: inline-flex
         justify-content: flex-end
         height: min-content
-        padding-right: 3%
+        padding-right: 0.5rem
         align-items: center
 
     #menu ul li
         height: min-content
-        font-size: 1.3em
-
-    .language-switch
-        padding-right: 5px
+        font-size: 1.55rem
 
     #navigation-bar .menu-icon-container,
-    #menu #close-button,
-    #dropdown.hide
+    #menu #close-button
         display: none
 
     .menu-link
