--- a/src/styles/1-helpers/_variables.sass
+++ b/src/styles/1-helpers/_variables.sass
@@ -20,3 +20,4 @@ $green-transparent: #87c5be40
 $main-font: 'Open Sans', sans-serif
 $button-font: 'Roboto', sans-serif
 $logo-font: 'Martel Sans', sans-serif
+$text-font: 1.2rem
