--- a/src/styles/2-base/_buttons.sass
+++ b/src/styles/2-base/_buttons.sass
@@ -1,7 +1,7 @@
 //menu icon and content
 .menu-icon
     color: white
-    font-size: 2em
+    font-size: 2.5rem
     border: none
     background-color: inherit
     cursor: pointer
@@ -24,19 +24,11 @@
     top: 20%
     width: 100%
 
-#dropdown
-    height: 100%
-    width: 100%
-    position: relative
-    display: none
-    font-size: 0.8em
-    animation: fadeEffect 1.5s
-
 .menu-content li,
 .menu-content li ul li
     padding: 0.5em
     text-decoration: none
-    font-size: 1.7em
+    font-size: 2rem
     text-align: center
     display: block
     transition: 0.3s
@@ -51,16 +43,13 @@
     padding-top: 0.5em
     padding-right: 1em
     right: 0
-    font-size: 3em
+    font-size: 3.5rem
     color: whitesmoke
     cursor: pointer
 
 .menu-link
     color: whitesmoke
     cursor: pointer
-
-#dropdown.active
-    display: block
 
 button
     cursor: pointer
@@ -71,7 +60,8 @@ button
     text-decoration: 0
     background: $green
     color: white
-    padding: 0.5em 1em
+    padding: 0.5em 1em 0.5em 1em
+    font-size: 1.2rem
 
 .btn:hover,
 .btn:focus
@@ -85,7 +75,7 @@ button
 
 .icon
     color: #333
-    font-size: 1.8em
+    font-size: 2rem
     padding: 0.3em
 #logo:hover
     text-decoration: none
