--- a/src/styles/2-base/_core.sass
+++ b/src/styles/2-base/_core.sass
@@ -1,11 +1,11 @@
 html
     height: 100%
+    font-size: 1em
     
 body
     font-family: $main-font
     background: white
     color: #333
-    font-size: 1.1em
     line-height: 1.4em
     height: 100%
     margin: 0
@@ -18,15 +18,18 @@ img
 h1, h2, h3
     margin: 0
     padding-top: 1em
-    padding-bottom: 0.5em
+    padding-bottom: 1em
     font-family: Arial
     font-weight: normal
 
 h1
-    font-size: 1.5em
+    font-size: 1.7rem
 
 h2
-    font-size: 1.2em
+    font-size: 1.4rem
+
+.content-title
+    text-align: center
 
 p
     margin: 0
@@ -43,5 +46,8 @@ a:hover
     text-decoration: underline
 
 .small-text
-    font-size: 0.8em
+    font-size: 0.7rem
+
+.main-text
+    font-size: 1.2rem
 
