--- a/src/styles/4-modules/_contact-form.sass
+++ b/src/styles/4-modules/_contact-form.sass
@@ -9,7 +9,7 @@
 #contact-form > textarea,
 #submit-button
     text-decoration: none
-    font-size: 1.1em
+    font-size: 1.2rem
     font-family: Arial, sans-serif
     color: #333
     border: none
