--- a/src/styles/2-base/_core.sass
+++ b/src/styles/2-base/_core.sass
@@ -17,8 +17,8 @@ img
 
 h1, h2, h3
     margin: 0
-    padding-top: 1em
-    padding-bottom: 1em
+    padding-top: 1.3rem
+    padding-bottom: 1.3rem
     font-family: Arial
     font-weight: normal
 
@@ -28,11 +28,11 @@ h1
 h2
     font-size: 1.4rem
 
-.content-title
-    text-align: center
-
 p
     margin: 0
+
+.content-title
+    text-align: center
 
 ul
     list-style: none
@@ -42,8 +42,6 @@ ul
 a
     text-decoration: none
     color: $green
-a:hover
-    text-decoration: underline
 
 .small-text
     font-size: 0.7rem
