--- a/src/styles/4-modules/_contact-form.sass
+++ b/src/styles/4-modules/_contact-form.sass
@@ -2,7 +2,7 @@
     width: inherit
     height: min-content
     text-align: center
-    padding: 0 2em 0 2em
+    margin: 3rem 2rem 0 2rem
     line-height: 2.8em
 
 #contact-form > input, 
