--- a/src/styles/4-modules/_image-containers.sass
+++ b/src/styles/4-modules/_image-containers.sass
@@ -1,8 +1,18 @@
 // showcase
-.showcase-image
+.hero-image
     position: relative
     height: 60vh
 
+.hero-image img
+    position: relative
+    width: 100%
+    height: 100%
+    object-fit: cover
+    object-position: bottom
+
+.showcase-image
+    position: relative
+    height: 60vh
 .showcase-image img
     position: relative
     width: 100%
@@ -10,18 +20,27 @@
     object-fit: cover
     object-position: bottom
 
+.showcase-title
+    position: absolute
+    text-align: left
+    bottom: 1rem
+    color: white
+    font-family: $logo-font
+    font-size: 3rem
+    line-height: 1.1em
+
+img.image-center
+    object-position: center
+
 //desktop headline
 .big-headline
     position: absolute
-    text-align: center
-    width: 100%
-    bottom: 40%
-    color: whitesmoke
-    font-family: $button-font
-    font-size: 1.6rem
+    text-align: left
+    bottom: 1rem
+    color: white
+    font-family: $logo-font
+    font-size: 4rem
     line-height: 1.1em
-    font-weight: lighter
-    background-color: rgba(0, 0, 0, 0.3)
     display: none
 .big-headline.active
     display: block
@@ -44,8 +63,8 @@
 .headline-text
     position: absolute
     text-align: center
-    font-size: 1.8rem
-    font-family: $button-font
+    font-size: 2.4rem
+    font-family: $logo-font
     line-height: 1.1em
     font-weight: lighter
     top: 50%
@@ -62,12 +81,30 @@
     position: relative
     padding: 1em
 
-.card-content h1
-    color: $green-title
+.card-title
+    text-align: center
+    bottom: 1rem
+    color: white
+    font-family: $logo-font
+    font-size: 2.5rem
+    line-height: 1.1em
 
 .card-content p
-    font-size: 1.2rem
-    line-height: 1.7rem
+    font-size: 1.5rem
+    line-height: 2rem
+    font-weight: lighter
+    color: #111
+    padding-bottom: 1rem
 
 .image-grid li
     background: whitesmoke
+
+#race-1
+    background-color: rgb(250, 132, 197)
+    margin-top: 1rem
+#race-2
+    background-color: rgb(253, 95, 86)
+#race-3
+    background-color: rgb(87, 201, 201)
+#race-4
+    background-color: rgb(250, 182, 94)
