--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -7,7 +7,7 @@
         display: grid
         grid-template-columns: 1fr repeat(2, minmax(10em, 24em)) 1fr
         grid-template-rows: auto auto
-        grid-template-areas: ". race-1 race-2 ." ". race-3 race-4 ."
+        grid-template-areas: ". race-1 race-1 ." ". race-2 race-2 ." ". race-3 race-3 ." ". race-4 race-4 ." 
         grid-gap: 1em
 
     #race-1
@@ -25,8 +25,11 @@
     .image-wrap
         grid-column: 1/5
 
-    .showcase-image
-        height: 100vh
+    .showcase-title
+        font-size: 4rem
+
+    .hero-image
+        height: 70vh
 
     .section-a
         padding: 1em
@@ -66,14 +69,7 @@
 
     #contact-form
         line-height: 1.5em
-        
-@media screen and (min-width: 1315px)
-    .image-grid
-        display: grid
-        grid-template-columns: 1fr repeat(4, minmax(15em, 20em)) 1fr
-        grid-template-rows: auto
-        grid-template-areas: ". race-1 race-2 race-3 race-4 ."
-        grid-gap: 1em
 
-    .image-grid li
-        margin: 0em
+    .landing-page-text
+        font-size: 1.4rem
+        line-height: 2rem
