--- a/src/styles/4-modules/_image-containers.sass
+++ b/src/styles/4-modules/_image-containers.sass
@@ -31,6 +31,10 @@
 
 img.image-center
     object-position: center
+img.image-top
+    object-position: top
+
+
 
 //desktop headline
 .big-headline
@@ -100,7 +104,7 @@ img.image-center
     background: whitesmoke
 
 #race-1
-    background-color: rgb(250, 132, 197)
+    background-color: rgb(203, 255, 119)
     margin-top: 1rem
 #race-2
     background-color: rgb(253, 95, 86)
