adjust eng pages

--- a/src/styles/2-base/_core.sass
+++ b/src/styles/2-base/_core.sass
@@ -44,8 +44,9 @@ a
     color: $green
 
 .small-text
-    font-size: 0.7rem
+    font-size: 1rem
 
 .main-text
-    font-size: 1.2rem
+    font-size: $text-font
+    line-height: 1.7rem
 
