--- a/src/styles/4-modules/_image-containers.sass
+++ b/src/styles/4-modules/_image-containers.sass
@@ -94,7 +94,7 @@ img.image-top
     line-height: 1.1em
 
 .card-content p
-    font-size: 1.5rem
+    font-size: 1.6rem
     line-height: 2rem
     font-weight: lighter
     color: #111
@@ -104,11 +104,11 @@ img.image-top
     background: whitesmoke
 
 #race-1
-    background-color: rgb(203, 255, 119)
+    background-color: rgb(255, 112, 104, 0.95)
     margin-top: 1rem
 #race-2
-    background-color: rgb(253, 95, 86)
+    background-color: rgb(255, 228, 52, 0.80)
 #race-3
-    background-color: rgb(87, 201, 201)
+    background-color: rgb(87, 178, 201, 0.80)
 #race-4
     background-color: rgb(250, 182, 94)
