--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -1,11 +1,11 @@
 @media screen and (min-width: 700px)
     .grid
         display: grid
-        grid-template-columns: 1fr repeat(2, minmax(10em, 20em)) 1fr
+        grid-template-columns: 0.5fr 1fr 1fr 0.5fr
 
     .image-grid
         display: grid
-        grid-template-columns: 1fr repeat(2, minmax(10em, 24em)) 1fr
+        grid-template-columns: 0.4fr 1fr 1fr 0.4fr
         grid-template-rows: auto auto
         grid-template-areas: ". race-1 race-1 ." ". race-2 race-2 ." ". race-3 race-3 ." ". race-4 race-4 ." 
         grid-gap: 1em
