--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -12,7 +12,7 @@
     width: 100%
     height: 80px
     position: absolute
-    background-color: rgba(0, 0, 0, 0.1)
+    background-color: rgba(0, 0, 0, 0.3)
 
 #navigation-bar.clear-bar
     background-color: rgba(0, 0, 0, 0)
@@ -57,20 +57,20 @@
 .section-b
     background: whitesmoke
     font-size: 1.3rem
-    line-height: 1.8rem
+    line-height: 1.7rem
     margin-top: 1em
 
 .section-c
     background: white
     font-size: 1.3rem
-    line-height: 1.8rem
+    line-height: 1.7rem
 
 .section-d
     background: white
     text-align: left
 .section-d .content-wrap
     font-size: $text-font
-    line-height: 1.6rem
+    line-height: 1.7rem
 
 #main-footer
     padding: 2em 0 0 0
@@ -100,7 +100,7 @@
 .bottom-padding
     padding-bottom: 1em
 .big-spacing
-    line-height: 1.6em
+    line-height: 1.7em
 
 // content
 .opening
@@ -125,7 +125,7 @@
 
 // accordian
 .accordian a
-    font-size: 1.3rem
+    font-size: 1.2rem
 .inner
     padding: 1rem
     overflow: hidden
@@ -142,6 +142,9 @@ a.toggle
     border-radius: 0.1em
     margin: 0.3em 0 0 0.3em
     transition: background 0.3s ease
+    line-height: 2rem
+    font-size: 1.5rem
+    font-weight: lighter
 
     &:hover
         color: $green
