--- a/src/styles/4-modules/_contact-form.sass
+++ b/src/styles/4-modules/_contact-form.sass
@@ -2,14 +2,14 @@
     width: inherit
     height: min-content
     text-align: center
-    margin: 3rem 2rem 0 2rem
+    margin: 3rem 0 0 0
     line-height: 2.8em
 
 #contact-form > input, 
 #contact-form > textarea,
 #submit-button
     text-decoration: none
-    font-size: 1.2rem
+    font-size: $text-font
     font-family: Arial, sans-serif
     color: #333
     border: none
@@ -26,13 +26,12 @@
     padding: 0.5em
     margin-top: 0.5em
     background-color: $green
-    color: whitesmoke
+    color: white
     border-bottom: 0
     border-radius: 3px
 
 #submit-button:hover,
 #submit-button:focus
-    color: white
     text-decoration: underline
 
 .has-error
