--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -10,14 +10,10 @@
         grid-template-areas: ". race-1 race-1 ." ". race-2 race-2 ." ". race-3 race-3 ." ". race-4 race-4 ." 
         grid-gap: 1em
 
-    #race-1
-        grid-area: race-1
-    #race-2
-        grid-area: race-2
-    #race-3
-        grid-area: race-3
-    #race-4
-        grid-area: race-4
+    #race-1,
+    #race-2,
+    #race-3,
+    #race-4,
     .content-wrap,
     #main-footer div
         grid-column: 2/4
