--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -26,6 +26,14 @@
 
     .section-a
         padding: 1em
+    
+    .section-b
+        min-height: 30vh
+        max-height: min-content
+
+    .content-title,
+    .section-b .content-wrap
+        text-align: left
 
     .section-a ul li
         margin: 0
@@ -66,3 +74,5 @@
     .landing-page-text
         font-size: 1.4rem
         line-height: 2rem
+        padding-top: 1.5rem
+        padding-bottom: 0
