--- a/src/styles/2-base/_core.sass
+++ b/src/styles/2-base/_core.sass
@@ -15,18 +15,21 @@ img
     width: 100%
     height: auto
 
-h1, h2, h3
+h1, h2
     margin: 0
     padding-top: 1.3rem
     padding-bottom: 1.3rem
-    font-family: Arial
-    font-weight: normal
 
 h1
-    font-size: 1.7rem
+    font-size: 1.6rem
+    line-height: 2rem
+    font-family: "Open Sans", sans-serif
+    font-weight: lighter
 
 h2
     font-size: 1.4rem
+    font-family: Arial
+    font-weight: normal
 
 p
     margin: 0
