--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -55,10 +55,11 @@
     margin-top: 1em
 
 .section-b
-    background: whitesmoke
+    background: white
     font-size: 1.3rem
-    line-height: 2rem
-    margin-top: 1em
+    line-height: 1.8rem
+    height: auto
+    padding-top: 0
 
 .section-c
     background: white
@@ -111,8 +112,9 @@
 
 .landing-page-text
     font-size: 1.2rem
-    line-height: 1.5rem
+    line-height: 1.6rem
     font-weight: lighter
+    padding-bottom: 1.5rem
 
 // race descriptions
 .info-container
