make text smaller

--- a/src/styles/3-layout/_main-layout.sass
+++ b/src/styles/3-layout/_main-layout.sass
@@ -10,7 +10,7 @@
     right: 0
     z-index: 100
     width: 100%
-    height: 80px
+    height: 70px
     position: absolute
     background-color: rgba(0, 0, 0, 0.3)
 
@@ -56,22 +56,22 @@
 
 .section-b
     background: white
-    font-size: 1.3rem
+    font-size: 1.2rem
     line-height: 1.8rem
     height: auto
     padding-top: 0
 
 .section-c
     background: white
-    font-size: 1.3rem
-    line-height: 2rem
+    font-size: 1.2rem
+    line-height: 1.9rem
 
 .section-d
     background: white
     text-align: left
 .section-d .content-wrap
     font-size: $text-font
-    line-height: 2rem
+    line-height: 1.9rem
 
 #main-footer
     padding: 2em 0 0 0
@@ -100,14 +100,12 @@
     padding-top: 1em
 .bottom-padding
     padding-bottom: 1em
-.big-spacing
-    line-height: 2em
 
 // content
 .opening
     margin: 1rem 0 3rem 0
-    font-size: 1.5rem
-    line-height: 2rem
+    font-size: 1.4rem
+    line-height: 1.9rem
     font-weight: lighter
 
 .landing-page-text
@@ -140,12 +138,12 @@ a.toggle
     display: block
     background-color: $green
     color: white
-    padding: 1em
+    padding: 1rem
     border-radius: 0.1em
     margin: 0.3em 0 0 0.3em
     transition: background 0.3s ease
-    line-height: 2rem
-    font-size: 1.5rem
+    line-height: 1.9rem
+    font-size: 1.3rem
     font-weight: lighter
 
     &:hover
