move scripts and rename to js

--- a/src/styles/5-templates/_media-screen.sass
+++ b/src/styles/5-templates/_media-screen.sass
@@ -40,7 +40,7 @@
 
     #menu
         height: initial
-        width: inherit
+        width: 100%
         position: relative
         z-index: 1
         overflow-x: hidden
