--- a/src/styles/2-base/_buttons.sass
+++ b/src/styles/2-base/_buttons.sass
@@ -40,8 +40,8 @@
 
 #close-button
     position: absolute
-    padding-top: 0.5em
-    padding-right: 1em
+    padding-top: 1.5rem
+    padding-right: 1.5rem
     right: 0
     font-size: 3.5rem
     color: whitesmoke
