--- a/src/stylesSass/4-modules/_image-containers.sass
+++ b/src/stylesSass/4-modules/_image-containers.sass
@@ -1,10 +1,9 @@
 // showcase
 .hero-image
     position: relative
-    height: 60vh
+    height: 65vh
 
 .hero-image img
-    position: relative
     width: 100%
     height: 100%
     object-fit: cover
@@ -14,7 +13,6 @@
     position: relative
     height: 60vh
 .showcase-image img
-    position: relative
     width: 100%
     height: 100%
     object-fit: cover
@@ -54,12 +52,12 @@ img.image-top
     color: white
     background-color: $green
     padding: 0
-    height: 40vh
+    height: 15vh
+    min-height: 70px
     width: 100%
     display: none
     position: relative
 .text-wrap
-    position: absolute
     top: 0
     bottom: 0
     left: 0
