--- a/styles/main.css
+++ b/styles/main.css
@@ -218,7 +218,7 @@ button {
   height: inherit;
   display: inline-flex;
   justify-content: right;
-  padding-right: 0.5rem;
+  padding-right: 1rem;
 }
 
 .title {
@@ -405,11 +405,10 @@ a.toggle:hover {
 
 .hero-image {
   position: relative;
-  height: 60vh;
+  height: 65vh;
 }
 
 .hero-image img {
-  position: relative;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -422,7 +421,6 @@ a.toggle:hover {
 }
 
 .showcase-image img {
-  position: relative;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -466,14 +464,14 @@ img.image-top {
   color: white;
   background-color: #87c5be;
   padding: 0;
-  height: 40vh;
+  height: 15vh;
+  min-height: 70px;
   width: 100%;
   display: none;
   position: relative;
 }
 
 .text-wrap {
-  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
