--- a/src/stylesSass/5-templates/_media-screen.sass
+++ b/src/stylesSass/5-templates/_media-screen.sass
@@ -1,6 +1,6 @@
 @media screen and (min-height: 500px)
     .menu-content
-        padding-top: 30%
+        top: 25%
 
 @media screen and (min-width: 700px)
     .grid
