--- a/styles/main.css
+++ b/styles/main.css
@@ -108,7 +108,7 @@ a {
   position: relative;
   width: 100%;
   overflow: hidden;
-  padding-top: 5rem;
+  top: 5rem;
 }
 
 .menu-content li,
@@ -535,7 +535,7 @@ img.image-top {
 
 @media screen and (min-height: 500px) {
   .menu-content {
-    padding-top: 30%;
+    top: 25%;
   }
 }
 @media screen and (min-width: 700px) {
