put navbar inside relative div

--- a/src/stylesSass/5-templates/_media-screen.sass
+++ b/src/stylesSass/5-templates/_media-screen.sass
@@ -51,6 +51,7 @@
         flex-basis: auto
         display: inline-flex
         background: transparent
+        align-items: flex-start
     
     #menu ul
         display: inline-flex
