--- a/src/stylesSass/4-modules/_image-containers.sass
+++ b/src/stylesSass/4-modules/_image-containers.sass
@@ -62,6 +62,7 @@ img.image-top
     bottom: 0
     left: 0
     right: 0
+    position: absolute
 .headline-text
     position: absolute
     text-align: center
