--- a/src/stylesSass/4-modules/_image-containers.sass
+++ b/src/stylesSass/4-modules/_image-containers.sass
@@ -64,7 +64,7 @@ img.image-top
     right: 0
     position: absolute
 .headline-text
-    position: absolute
+    position: relative
     text-align: center
     font-size: 2.4rem
     font-family: $logo-font
